Frontend & Vcl Lctn - Tracking status handled

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -33,3 +33,7 @@
 .sidePathListContainer::-webkit-scrollbar {
     display: none;
 }
+
+.allStatusContainer::-webkit-scrollbar {
+    display: none;
+}
