--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -14,6 +14,15 @@
     cursor: move;
 }
 
+.leaflet-routing-container {
+    display: none;
+}
+
+
+
+
+/* NavBarComponent.jsx */
+
 .navMenuOps:hover {
     border: none;
     background: linear-gradient(to bottom, #388E3C, #4fc454);
@@ -26,14 +35,96 @@
     color: white;
 }
 
-.leaflet-routing-container {
-    display: none;
+@media (min-width: 800px) {
+    .navAppName::before {
+        visibility: visible;
+        content: "Municipality Garbage Management";
+        /* top: 50%;
+        transform: translateX(-50%); */
+    }
+
 }
+
+@media (max-width: 800px) and (min-width: 0px) {
+    .navAppName::before {
+        visibility: visible;
+        content: "MGM";
+        /* top: 50%;
+        transform: translateX(-50%); */
+    }
+
+}
+
+
+
+
+/* Login.jsx */ 
+
+@media (min-width: 845px){
+    .loginContainer {
+        right: 80px;
+    }
+}
+
+@media (max-width: 845px){
+    .loginPageMain {
+        justify-content: center;
+    }
+}
+
+@media (max-width: 410px){
+    .inputsContainer{
+        width: 80vw;
+    }
+}
+
+
+
+
+/* AddDustbin.jsx & AddPath.jsx */
 
 .sidePathListContainer::-webkit-scrollbar {
     display: none;
 }
 
+
+
+
+/* Dashboard.jsx */
+
 .allStatusContainer::-webkit-scrollbar {
     display: none;
+}
+
+
+
+
+/* AddVehicle.jsx & AddDriver.jsx */
+
+@media (max-width: 1386px) and (min-width: 1078px)  {
+    .vehicleGrid, .driverGrid {
+        grid-template-columns: repeat(4, 1fr);
+    }
+}
+
+@media (max-width: 1078px) and (min-width: 770px) {
+    .vehicleGrid, .driverGrid {
+        grid-template-columns: repeat(3, 1fr);
+    }
+}
+
+@media (max-width: 770px) and (min-width: 462px) {
+    .vehicleGrid, .driverGrid {
+        grid-template-columns: repeat(2, 1fr);
+    }
+}
+
+@media (max-width: 462px) and (min-width: 0px) {
+    .vehicleGrid, .driverGrid {
+        grid-template-columns: repeat(1, 1fr);
+    }
+
+    .addVehicleBtn, .addDriverBtn {
+        height: 15rem;
+    }
 }
