Frontend - UI Changes

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -91,8 +91,11 @@
 }
 
 @media (max-width: 500px){
-    .inputsContainer{
+    .inputsContainer{               /* for AddPath.jsx also */
         width: 80vw;
+    }
+    .inputFields{
+        width: 100%;
     }
 }
 
